k8s-chatapp-file/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: chat-app

spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
